// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`import mapping V1 should flatten the mapping and send a query per resource 1`] = `
Array [
  Object {
    "data": Object {
      "attributes": Object {
        "create": Array [
          Object {
            "comments": Object {
              "create": Object {
                "author": Object {
                  "connect": Object {
                    "email": "admin@arkhn.com",
                  },
                },
                "content": "test",
              },
            },
            "definitionId": "",
            "id": "ck5e4gogc00334bqbp8kxw8s2",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gogf00444bqbn57lzp6t",
                  "script": null,
                  "staticValue": "internal",
                },
              ],
            },
            "mergingScript": null,
            "path": "managingOrganization.reference",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gohq01824bqbk9pjdnld",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gohq01864bqbtfhljvey",
                  "script": null,
                  "staticValue": "/Organization/{id}",
                },
              ],
            },
            "mergingScript": null,
            "path": "managingOrganization.identifier.system",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gohs01964bqbkydarhyz",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gohw02174bqbin0nto8k",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "SERVICE",
                      "id": "ck5e4gohu02074bqbryuhuno6",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "SEJOUR",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "managingOrganization.identifier.value",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gox636504bqbttihzff5",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4goxc36834bqbxnwxjra0",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "ETATSEJ",
                      "id": "ck5e4goxa36754bqbqt2bna1u",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "SEJOUR",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "status",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4goye39154bqbandupr1t",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4goyi39384bqblrlsb7kq",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "SECLEUNIK",
                      "id": "ck5e4goyg39244bqbbbploxuh",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "SEJOUR",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "identifier[0].value",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gp4u52264bqb597v8ix0",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gp4z52594bqbeuqi7zie",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "ADMISSION",
                      "id": "ck5e4gp4y52424bqbi5ytyqhl",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "SEJOUR",
                    },
                  },
                  "staticValue": null,
                },
                Object {
                  "id": "ck5e4gp5552894bqbklqb2zy0",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "ADMISSION2",
                      "id": "ck5e4gp5152674bqbcsjpsvun",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "SEJOUR",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": "select_first_not_empty",
            "path": "identifier[1].value",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gpei74714bqbnulirgmh",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gpem74964bqbpe64a9ko",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "TWCLEUNIK",
                      "id": "ck5e4gpej74814bqbk325ta80",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "SEJOUR",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "type[0].coding[0].code",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gpeo75104bqbeea2t7bm",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gpez75814bqbaow1nrym",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "LIBELTW",
                      "id": "ck5e4gpep75234bqby1atyor0",
                      "joins": Object {
                        "create": Array [
                          Object {
                            "id": "ck5e4gpes75404bqbxl3uos13",
                            "tables": Object {
                              "create": Array [
                                Object {
                                  "column": "TWCLEUNIK",
                                  "id": "ck5e4gpev75594bqb5gm7jz4c",
                                  "owner": "OPS$ACHQ1ABC",
                                  "table": "SEJOUR",
                                },
                                Object {
                                  "column": "TWCLEUNIK",
                                  "id": "ck5e4gpew75684bqbcccrtlmm",
                                  "owner": "OPS$ACHQ1ABC",
                                  "table": "TYPESEJ",
                                },
                              ],
                            },
                          },
                        ],
                      },
                      "owner": "OPS$ACHQ1ABC",
                      "table": "TYPESEJ",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "type[0].coding[0].display",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gpjs86614bqbh3zkh4g0",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gpjw86874bqbe5ya9tij",
                  "script": "clean_date",
                  "sqlValue": Object {
                    "create": Object {
                      "column": "DATEOUT",
                      "id": "ck5e4gpju86754bqbhbbipzfb",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "SEJOUR",
                    },
                  },
                  "staticValue": null,
                },
                Object {
                  "id": "ck5e4gpjz87044bqbd7e64ara",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "HEUREOUT",
                      "id": "ck5e4gpjy86984bqbwtbk3b5u",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "SEJOUR",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": "merge_concat",
            "path": "period.end",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gpk187184bqbpqe2k5he",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gpk687474bqbwjii64mw",
                  "script": "clean_date",
                  "sqlValue": Object {
                    "create": Object {
                      "column": "DATEIN",
                      "id": "ck5e4gpk487354bqbuu6qt323",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "SEJOUR",
                    },
                  },
                  "staticValue": null,
                },
                Object {
                  "id": "ck5e4gpk987714bqbfp7a2m83",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "HEUREIN",
                      "id": "ck5e4gpk787564bqbh22h24p4",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "SEJOUR",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": "merge_concat",
            "path": "period.start",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gpo596984bqblysyqa46",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gpo897184bqbyozdb4pb",
                  "script": null,
                  "staticValue": "internal",
                },
              ],
            },
            "mergingScript": null,
            "path": "patient.reference",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gpot98054bqbpli9cv1a",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gpou98164bqb231uf5id",
                  "script": null,
                  "staticValue": "/Patient/{id}",
                },
              ],
            },
            "mergingScript": null,
            "path": "patient.identifier.system",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gpow98224bqbk7vqkaow",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gpox98344bqbnxdmmjdu",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "PACLEUNIK",
                      "id": "ck5e4gpox98294bqb8eody8wr",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "SEJOUR",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "patient.identifier.value",
          },
        ],
      },
      "definitionId": "EpisodeOfCare",
      "id": "ck5e4gog400124bqb4dp9six4",
      "label": "Hospital Stay",
      "primaryKeyColumn": "SECLEUNIK",
      "primaryKeyOwner": "OPS$ACHQ1ABC",
      "primaryKeyTable": "SEJOUR",
      "source": Object {
        "connect": Object {
          "id": "01234567",
        },
      },
    },
  },
]
`;

exports[`import mapping V1 should flatten the mapping and send a query per resource 2`] = `
Array [
  Object {
    "data": Object {
      "attributes": Object {
        "create": Array [
          Object {
            "definitionId": "",
            "id": "ck5e4gogh00484bqbuwsnv4t9",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gogt00694bqbkd9cw0qo",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "INACTIVPAT",
                      "id": "ck5e4gogo00604bqbbs7cs5pb",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "active",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gohp01814bqbs8qx81j5",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4goht02054bqbj7cmhxla",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "ADR1PAT",
                      "id": "ck5e4gohr01934bqbtc95bki8",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
                Object {
                  "id": "ck5e4goi302564bqbpicibaek",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "ADR2PAT",
                      "id": "ck5e4gohv02134bqbxw3ga300",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
                Object {
                  "id": "ck5e4goi802914bqb05pgjyzx",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "ADR3PAT",
                      "id": "ck5e4goi702764bqbeqct1msa",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": "merge_concat",
            "path": "address[0].line[0]",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4goia03004bqbjqy75bvq",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4goie03334bqbwswphjmq",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "VILLEPAT",
                      "id": "ck5e4goid03244bqb8gg36f1q",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "address[0].city",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4goii03684bqb0mtmtsgv",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4goip04114bqbu3lp4a2l",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "CPOSTPAT",
                      "id": "ck5e4goin03964bqbe917muaz",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "address[0].postalCode",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4goka05954bqb4yxhres8",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gokg06184bqbd9zm7667",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "INACTIVPAT",
                      "id": "ck5e4gokd06104bqb0dxpex2x",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
                Object {
                  "id": "ck5e4gokl06524bqbamqx4xu3",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "IDMOTIFINAC",
                      "id": "ck5e4gokj06334bqbp4xk56mz",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "deceasedBoolean",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gokn06774bqb4ua4bmlo",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gokq07014bqb44udt1pu",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "DATEINACPAT",
                      "id": "ck5e4gokp06934bqb6bw4ssk8",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "deceasedDateTime",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gol007754bqb0gqfje7t",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gol508114bqb6adcya0p",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "TELPAT",
                      "id": "ck5e4gol307944bqbawz4m1dk",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "telecom[0].value",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4golp09554bqb64r11ytv",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gols09684bqby358ejh3",
                  "script": null,
                  "staticValue": "official",
                },
              ],
            },
            "mergingScript": null,
            "path": "name[0].use",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4golu09864bqbrfrubed0",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4golz10194bqbqaarajtm",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "NOMPAT",
                      "id": "ck5e4golx10094bqbq0xjosne",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "name[0].family",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gom510504bqbicck1rvw",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gomi11274bqbvlkcuszk",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "PRENOMPAT",
                      "id": "ck5e4goma10884bqbiw1k7ib5",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "name[0].given[0]",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gonf13254bqbx0npb5um",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gonh13434bqbiucscvt3",
                  "script": null,
                  "staticValue": "maiden",
                },
              ],
            },
            "mergingScript": null,
            "path": "name[1].use",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gonk13654bqb9zs6we66",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gonr14104bqbyxhw6h3g",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "NOMJFPAT",
                      "id": "ck5e4gonn13864bqbggu65880",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "name[1].family",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gopk18094bqblxjwe01o",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gopq18474bqbz4o44me4",
                  "script": "clean_date",
                  "sqlValue": Object {
                    "create": Object {
                      "column": "DATENAISPA",
                      "id": "ck5e4gopl18234bqbccqpm1ix",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "birthDate",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gopu18734bqbqkwukucb",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4goq519504bqbq43l8f8i",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "SEXEPAT",
                      "id": "ck5e4goq119224bqb8f858blh",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "gender",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gorp22994bqbkm666j06",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gors23124bqbvk7zpx4e",
                  "script": null,
                  "staticValue": "http://terminology.interopsante.org/CodeSystem/v2-0203",
                },
              ],
            },
            "mergingScript": null,
            "path": "identifier[0].type.coding[0].system",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4goru23344bqbljve22yc",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gorw23494bqbjhelrogp",
                  "script": null,
                  "staticValue": "PI",
                },
              ],
            },
            "mergingScript": null,
            "path": "identifier[0].type.coding[0].code",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gorx23584bqbve9dzelc",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gory23684bqbxvizzbcs",
                  "script": null,
                  "staticValue": "Patient internal identifier",
                },
              ],
            },
            "mergingScript": null,
            "path": "identifier[0].type.coding[0].display",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gos023844bqbu3iczxmp",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gos223954bqb8z1mnh0o",
                  "script": null,
                  "staticValue": "false",
                },
              ],
            },
            "mergingScript": null,
            "path": "identifier[0].type.coding[0].userSelected",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gos924394bqbfx6t99no",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gosc24644bqbtunpnvg6",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "NOOBSPAT",
                      "id": "ck5e4gosb24544bqb4znsgcv7",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "identifier[0].value",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gox836614bqbwvri7pce",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4goxc36864bqb7zhsmcis",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "PACLEUNIK",
                      "id": "ck5e4gox936734bqb68ceisqs",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "identifier[1].value",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gp2i47394bqbjbia5vh4",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gp2n47624bqbtdbc9a8a",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "DOSSIERPAT",
                      "id": "ck5e4gp2j47474bqbzcvho0y2",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "identifier[2].value",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gp2s47924bqbkjbd9jgu",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gp2w48204bqbesmit64k",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "DATEINPAT",
                      "id": "ck5e4gp2u48024bqbw8w9a55c",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "identifier[2].period.start",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gp2z48384bqbt1dywqe9",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gp3348634bqbt09n7ipm",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "DATEOUTPAT",
                      "id": "ck5e4gp3148524bqblfown3dz",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "identifier[2].period.end",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gpi582554bqbudmrhol2",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gpi682644bqbhynn8ghm",
                  "script": null,
                  "staticValue": "/Organization",
                },
              ],
            },
            "mergingScript": null,
            "path": "managingOrganization.type",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gpij83584bqbsdl7a7zt",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gpij83654bqbzmswirww",
                  "script": null,
                  "staticValue": "/Organization/{id}",
                },
              ],
            },
            "mergingScript": null,
            "path": "managingOrganization.identifier.system",
          },
          Object {
            "definitionId": "",
            "id": "ck5e4gpik83714bqbmrd4bwu6",
            "inputs": Object {
              "create": Array [
                Object {
                  "id": "ck5e4gpim83864bqbjw8vuob0",
                  "script": null,
                  "sqlValue": Object {
                    "create": Object {
                      "column": "CODESERV",
                      "id": "ck5e4gpil83774bqbifip928g",
                      "owner": "OPS$ACHQ1ABC",
                      "table": "PATIENT",
                    },
                  },
                  "staticValue": null,
                },
              ],
            },
            "mergingScript": null,
            "path": "managingOrganization.identifier.value",
          },
        ],
      },
      "definitionId": "Patient",
      "id": "ck5e4gog300084bqbfwsq9exl",
      "label": "",
      "primaryKeyColumn": "PACLEUNIK",
      "primaryKeyOwner": "OPS$ACHQ1ABC",
      "primaryKeyTable": "PATIENT",
      "source": Object {
        "connect": Object {
          "id": "01234567",
        },
      },
    },
  },
]
`;

exports[`import mapping V1 should have computed the path correctly 1`] = `
Object {
  "active": Array [
    Object {
      "id": "ck5e4gogt00694bqbkd9cw0qo",
      "script": null,
      "sqlValue": Object {
        "create": Object {
          "column": "INACTIVPAT",
          "id": "ck5e4gogo00604bqbbs7cs5pb",
          "owner": "OPS$ACHQ1ABC",
          "table": "PATIENT",
        },
      },
      "staticValue": null,
    },
  ],
  "address": Array [
    Object {
      "city": Array [
        Object {
          "id": "ck5e4goie03334bqbwswphjmq",
          "script": null,
          "sqlValue": Object {
            "create": Object {
              "column": "VILLEPAT",
              "id": "ck5e4goid03244bqb8gg36f1q",
              "owner": "OPS$ACHQ1ABC",
              "table": "PATIENT",
            },
          },
          "staticValue": null,
        },
      ],
      "line": Array [
        Array [
          Object {
            "id": "ck5e4goht02054bqbj7cmhxla",
            "script": null,
            "sqlValue": Object {
              "create": Object {
                "column": "ADR1PAT",
                "id": "ck5e4gohr01934bqbtc95bki8",
                "owner": "OPS$ACHQ1ABC",
                "table": "PATIENT",
              },
            },
            "staticValue": null,
          },
          Object {
            "id": "ck5e4goi302564bqbpicibaek",
            "script": null,
            "sqlValue": Object {
              "create": Object {
                "column": "ADR2PAT",
                "id": "ck5e4gohv02134bqbxw3ga300",
                "owner": "OPS$ACHQ1ABC",
                "table": "PATIENT",
              },
            },
            "staticValue": null,
          },
          Object {
            "id": "ck5e4goi802914bqb05pgjyzx",
            "script": null,
            "sqlValue": Object {
              "create": Object {
                "column": "ADR3PAT",
                "id": "ck5e4goi702764bqbeqct1msa",
                "owner": "OPS$ACHQ1ABC",
                "table": "PATIENT",
              },
            },
            "staticValue": null,
          },
        ],
      ],
      "postalCode": Array [
        Object {
          "id": "ck5e4goip04114bqbu3lp4a2l",
          "script": null,
          "sqlValue": Object {
            "create": Object {
              "column": "CPOSTPAT",
              "id": "ck5e4goin03964bqbe917muaz",
              "owner": "OPS$ACHQ1ABC",
              "table": "PATIENT",
            },
          },
          "staticValue": null,
        },
      ],
    },
  ],
  "birthDate": Array [
    Object {
      "id": "ck5e4gopq18474bqbz4o44me4",
      "script": "clean_date",
      "sqlValue": Object {
        "create": Object {
          "column": "DATENAISPA",
          "id": "ck5e4gopl18234bqbccqpm1ix",
          "owner": "OPS$ACHQ1ABC",
          "table": "PATIENT",
        },
      },
      "staticValue": null,
    },
  ],
  "deceasedBoolean": Array [
    Object {
      "id": "ck5e4gokg06184bqbd9zm7667",
      "script": null,
      "sqlValue": Object {
        "create": Object {
          "column": "INACTIVPAT",
          "id": "ck5e4gokd06104bqb0dxpex2x",
          "owner": "OPS$ACHQ1ABC",
          "table": "PATIENT",
        },
      },
      "staticValue": null,
    },
    Object {
      "id": "ck5e4gokl06524bqbamqx4xu3",
      "script": null,
      "sqlValue": Object {
        "create": Object {
          "column": "IDMOTIFINAC",
          "id": "ck5e4gokj06334bqbp4xk56mz",
          "owner": "OPS$ACHQ1ABC",
          "table": "PATIENT",
        },
      },
      "staticValue": null,
    },
  ],
  "deceasedDateTime": Array [
    Object {
      "id": "ck5e4gokq07014bqb44udt1pu",
      "script": null,
      "sqlValue": Object {
        "create": Object {
          "column": "DATEINACPAT",
          "id": "ck5e4gokp06934bqb6bw4ssk8",
          "owner": "OPS$ACHQ1ABC",
          "table": "PATIENT",
        },
      },
      "staticValue": null,
    },
  ],
  "gender": Array [
    Object {
      "id": "ck5e4goq519504bqbq43l8f8i",
      "script": null,
      "sqlValue": Object {
        "create": Object {
          "column": "SEXEPAT",
          "id": "ck5e4goq119224bqb8f858blh",
          "owner": "OPS$ACHQ1ABC",
          "table": "PATIENT",
        },
      },
      "staticValue": null,
    },
  ],
  "identifier": Array [
    Object {
      "type": Object {
        "coding": Array [
          Object {
            "code": Array [
              Object {
                "id": "ck5e4gorw23494bqbjhelrogp",
                "script": null,
                "staticValue": "PI",
              },
            ],
            "display": Array [
              Object {
                "id": "ck5e4gory23684bqbxvizzbcs",
                "script": null,
                "staticValue": "Patient internal identifier",
              },
            ],
            "system": Array [
              Object {
                "id": "ck5e4gors23124bqbvk7zpx4e",
                "script": null,
                "staticValue": "http://terminology.interopsante.org/CodeSystem/v2-0203",
              },
            ],
            "userSelected": Array [
              Object {
                "id": "ck5e4gos223954bqb8z1mnh0o",
                "script": null,
                "staticValue": "false",
              },
            ],
          },
        ],
      },
      "value": Array [
        Object {
          "id": "ck5e4gosc24644bqbtunpnvg6",
          "script": null,
          "sqlValue": Object {
            "create": Object {
              "column": "NOOBSPAT",
              "id": "ck5e4gosb24544bqb4znsgcv7",
              "owner": "OPS$ACHQ1ABC",
              "table": "PATIENT",
            },
          },
          "staticValue": null,
        },
      ],
    },
    Object {
      "value": Array [
        Object {
          "id": "ck5e4goxc36864bqb7zhsmcis",
          "script": null,
          "sqlValue": Object {
            "create": Object {
              "column": "PACLEUNIK",
              "id": "ck5e4gox936734bqb68ceisqs",
              "owner": "OPS$ACHQ1ABC",
              "table": "PATIENT",
            },
          },
          "staticValue": null,
        },
      ],
    },
    Object {
      "period": Object {
        "end": Array [
          Object {
            "id": "ck5e4gp3348634bqbt09n7ipm",
            "script": null,
            "sqlValue": Object {
              "create": Object {
                "column": "DATEOUTPAT",
                "id": "ck5e4gp3148524bqblfown3dz",
                "owner": "OPS$ACHQ1ABC",
                "table": "PATIENT",
              },
            },
            "staticValue": null,
          },
        ],
        "start": Array [
          Object {
            "id": "ck5e4gp2w48204bqbesmit64k",
            "script": null,
            "sqlValue": Object {
              "create": Object {
                "column": "DATEINPAT",
                "id": "ck5e4gp2u48024bqbw8w9a55c",
                "owner": "OPS$ACHQ1ABC",
                "table": "PATIENT",
              },
            },
            "staticValue": null,
          },
        ],
      },
      "value": Array [
        Object {
          "id": "ck5e4gp2n47624bqbtdbc9a8a",
          "script": null,
          "sqlValue": Object {
            "create": Object {
              "column": "DOSSIERPAT",
              "id": "ck5e4gp2j47474bqbzcvho0y2",
              "owner": "OPS$ACHQ1ABC",
              "table": "PATIENT",
            },
          },
          "staticValue": null,
        },
      ],
    },
  ],
  "managingOrganization": Object {
    "identifier": Object {
      "system": Array [
        Object {
          "id": "ck5e4gpij83654bqbzmswirww",
          "script": null,
          "staticValue": "/Organization/{id}",
        },
      ],
      "value": Array [
        Object {
          "id": "ck5e4gpim83864bqbjw8vuob0",
          "script": null,
          "sqlValue": Object {
            "create": Object {
              "column": "CODESERV",
              "id": "ck5e4gpil83774bqbifip928g",
              "owner": "OPS$ACHQ1ABC",
              "table": "PATIENT",
            },
          },
          "staticValue": null,
        },
      ],
    },
    "type": Array [
      Object {
        "id": "ck5e4gpi682644bqbhynn8ghm",
        "script": null,
        "staticValue": "/Organization",
      },
    ],
  },
  "name": Array [
    Object {
      "family": Array [
        Object {
          "id": "ck5e4golz10194bqbqaarajtm",
          "script": null,
          "sqlValue": Object {
            "create": Object {
              "column": "NOMPAT",
              "id": "ck5e4golx10094bqbq0xjosne",
              "owner": "OPS$ACHQ1ABC",
              "table": "PATIENT",
            },
          },
          "staticValue": null,
        },
      ],
      "given": Array [
        Array [
          Object {
            "id": "ck5e4gomi11274bqbvlkcuszk",
            "script": null,
            "sqlValue": Object {
              "create": Object {
                "column": "PRENOMPAT",
                "id": "ck5e4goma10884bqbiw1k7ib5",
                "owner": "OPS$ACHQ1ABC",
                "table": "PATIENT",
              },
            },
            "staticValue": null,
          },
        ],
      ],
      "use": Array [
        Object {
          "id": "ck5e4gols09684bqby358ejh3",
          "script": null,
          "staticValue": "official",
        },
      ],
    },
    Object {
      "family": Array [
        Object {
          "id": "ck5e4gonr14104bqbyxhw6h3g",
          "script": null,
          "sqlValue": Object {
            "create": Object {
              "column": "NOMJFPAT",
              "id": "ck5e4gonn13864bqbggu65880",
              "owner": "OPS$ACHQ1ABC",
              "table": "PATIENT",
            },
          },
          "staticValue": null,
        },
      ],
      "use": Array [
        Object {
          "id": "ck5e4gonh13434bqbiucscvt3",
          "script": null,
          "staticValue": "maiden",
        },
      ],
    },
  ],
  "telecom": Array [
    Object {
      "value": Array [
        Object {
          "id": "ck5e4gol508114bqb6adcya0p",
          "script": null,
          "sqlValue": Object {
            "create": Object {
              "column": "TELPAT",
              "id": "ck5e4gol307944bqbawz4m1dk",
              "owner": "OPS$ACHQ1ABC",
              "table": "PATIENT",
            },
          },
          "staticValue": null,
        },
      ],
    },
  ],
}
`;
